name:                edu-wumpus
version:             0.1.0.0
synopsis:            Hunt the Wumpus, a Haskell exercise
homepage:            https://github.com/instinctive/edu-wumpus#readme
license:             BSD3
license-file:        LICENSE
category:            development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:         Please see the README on Github at <https://github.com/instinctive/edu-wumpus#readme>

source-repository head
  type:     git
  location: https://github.com/instinctive/edu-wumpus

library
  hs-source-dirs:      src
  exposed-modules:     Cave
   -- , Common
   -- , Game
   -- , Output
   -- , Parse
   -- , Input
   -- , Play
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
   , base-prelude
   , containers
   , MonadRandom

executable wumpus-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , edu-wumpus
   , base-prelude

test-suite doctest-exe
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
   , base-prelude
   , doctest
